Agregando caso de uso para buscar producto por Id
